--- a/Main page/Djoebed_portofolio.html
+++ b/Main page/Djoebed_portofolio.html
@@ -101,7 +101,7 @@
         </section>
     </div>
 	
-	<script src="script.js"></script>
+	<script src="Script.js"></script>
 
     <footer>
         &copy; 2024 Muhammad Jubaidi. All Rights Reserved.
